fix padding to prevent width overflow
--HG--
extra : rebase_source : 8a0650dcc57bc799300d81b5f263dba629789b09

--- a/plugins/supported/command_line/resources/cli.less
+++ b/plugins/supported/command_line/resources/cli.less
@@ -74,7 +74,7 @@ and even bespin. Also the more complex layouts could be cached
 */
 .cmd_hints {
   line-height: 1.2em;
-  margin-left: 30px;
+  padding-left: 30px;
   display: box; display: -moz-box; display: -webkit-box;
   box-orient: vertical; -moz-box-orient: vertical; -webkit-box-orient: vertical;
   box-pack: end; -moz-box-pack: end; -webkit-box-pack: end;
